tests/rspack-test/normalCases/errors/duplicate-export/bar.js
const B = 2;
export { B, B };
